# Geo-Nominatim-API

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build-and-push.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_http_server.py
src/: __init__.py  configs.py
src/api/: auth.py
src/api/geo/: router.py  schema.py
src/api/other/: router.py
src/nominatim/: handler.py  services.py  types.py
src/nominatim/client/: NominatimClient.py  NominatimClientAbstract.py  exceptions.py  utils.py
tests/: BaseTest.py
tests/api/: ApiBaseTest.py
tests/api/nominatim/: ApiNominatimTest.py
tests/api/other/: ApiOtherTest.py
tests/nominatim/: NominatimServiceTest.py
tests/utils/: NominatimTestClient.py  response_mocks.py
