[tool.coverage.run]
omit = [
    'src\nominatim\client\NominatimClient.py',
    'src\nominatim\client\utils.py'
]

[project]
name = "geo-nominatim-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.7.9",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "coverage>=7.9.2",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "exceptiongroup>=1.3.0",
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "orjson>=3.10.18",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pygments>=2.19.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "starlette>=0.47.1",
    "tomli>=2.2.1",
    "typer>=0.16.0",
    "typing-extensions>=4.14.1",
    "ujson>=5.10.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
    "websockets>=15.0.1",
]
